--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Safari</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -33,7 +36,7 @@
                   <a class="menu__link" href="#">Экскурсии</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">Туры</a>
+                  <a class="menu__link" href="#">Туры</a> 
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="#">Об Африке</a>
@@ -44,7 +47,9 @@
               </ul>
             </nav>
           </div>
-          <h1 class="header__title">Сафари по Африке</h1>
+          <h1 class="header__title">
+            Сафари по Африке
+          </h1>
           <div class="header__content">
             <p class="header__descr">
               Туры по самым экзотическим местам
@@ -53,7 +58,7 @@
             <a class="header__btn" href="#">Оставить заявку</a>
             <div class="header__arrow">
               <a class="header__arrow-link" href="#">
-                <img class="header__arrow-img" src="images/arrow.svg" alt="Стрелка для перемещения вниз">
+                <img class="header__arrow-img" src="images/arrow.svg" alt="Стрелка вниз">
               </a>
             </div>
           </div>
