--- a/index.html
+++ b/index.html
@@ -67,6 +67,59 @@
       </div>
   </header>
 
+  <div class="direction">
+    <div class="container">
+
+      <div class="direction__inner">
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-1.jpg" alt="Картинка">
+          <p class="direction__text">Намибия</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-2.jpg" alt="Картинка">
+          <p class="direction__text">Танзания</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-3.jpg" alt="Картинка">
+          <p class="direction__text">Кения</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-4.jpg" alt="Картинка">
+          <p class="direction__text">Ботсвана</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-5.jpg" alt="Картинка">
+          <p class="direction__text">Кейптаун</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-6.jpg" alt="Картинка">
+          <p class="direction__text">Мадагаскар</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-7.jpg" alt="Картинка">
+          <p class="direction__text">Занзибар</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-8.jpg" alt="Картинка">
+          <p class="direction__text">ЮАР</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-9.jpg" alt="Картинка">
+          <p class="direction__text">Мозамбик</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-10.jpg" alt=Картинка"">
+          <p class="direction__text">Замбия</p>
+        </div>
+        <div class="direction__item">
+          <img class="direction__img" src="images/directions-11.jpg" alt=Картинка"">
+          <p class="direction__text">Конго</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
