--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
   <header class="header">
       <div class="container">
-
         <div class="header__inner">
           <div class="header__top">
             <a class="logo" href="#">
@@ -63,13 +62,11 @@
             </div>
           </div>
         </div>
-
       </div>
   </header>
 
   <div class="direction">
     <div class="container">
-
       <div class="direction__inner">
         <div class="direction__item">
           <img class="direction__img" src="images/directions-1.jpg" alt="Картинка">
@@ -116,9 +113,110 @@
           <p class="direction__text">Конго</p>
         </div>
       </div>
-
     </div>
   </div>
+
+  <section class="travel-info">
+    <div class="container">
+        <h2 class="travel-info__title title">Основные направления</h2>
+        <div class="travel-info__items">
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-1.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Полная организация отдыха: групповые и индивидуальные туры.
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-2.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Организация трансфера из любой точки мира
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-3.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Проживание в отелях по маршруту
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-4.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Аренда автомобилей и любого вида транспорта
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-5.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Медицинская страховка
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-6.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Сопровождение русскоговорящих гидов
+            </p>
+          </div>
+          <div class="travel-info__item">
+            <img class="travel-info__img" src="images/icon-7.svg" alt="Иконка">
+            <p class="travel-info__text">
+              Организация VIP-туров
+            </p>
+          </div>
+        </div>
+    </div>
+  </section>
+
+  <section class="popular">
+    <div class="container">
+      <h2 class="popular__title title">Популярные предложения</h2>
+      <div class="popular__items">
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ПО НАМИБИИ</h4>
+          <p class="popular__price">от 3000 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">КЛАССИСКА КЕНИИ</h4>
+          <p class="popular__price">от 3500 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">САМЫЕ ПОПУЛЯРНЫЕ САФАРИ ПАРКИ И ЗАПОВЕДНИКИ ТАНЗАНИИ</h4>
+          <p class="popular__country">Танзания</p>
+          <p class="popular__time">7 дней / 6 ночей</p>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ИССЛЕДОВАНИЕ БОТСВАНЫ</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ЧЕРЕЗ 5 СТРАН ЮЖНОЙ АФРИКИ</h4>
+          <p class="popular__price">от 5000 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ГРАНДИОЗНОЕ ПРИКЛЮЧЕНИЕ ПО 9 СТРАНАМ АФРИКИ</h4>
+          <p class="popular__country">ЮАР, Замбия, Намибия, Зимбабве, Ботсвана, Мозамбик, Танзания, Кения</p>
+          <p class="popular__time">24 дней / 23 ночей</p>
+          <p class="popular__price">от 6000 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ВЕЛИКОЛЕПНЫЙ КЕЙПТАУН</h4>
+          <p class="popular__price">от 3500 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ПО ЮАР:</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ВЕЛИКАЯ МИГРАЦИЯ В ТАНЗАНИИ И ОТДЫХ НА ЗАНЗИБАРЕ/h4>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a class="popular__link" href="#">
+          <h4 class="popular__link-title">ОТ КЕЙПТАУНА ДО ВОДОПАДА ВИКТОРИЯ</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
