--- a/index.html
+++ b/index.html
@@ -170,50 +170,76 @@
     <div class="container">
       <h2 class="popular__title title">Популярные предложения</h2>
       <div class="popular__items">
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-1.jpg);">
           <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ПО НАМИБИИ</h4>
           <p class="popular__price">от 3000 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-2.jpg);">
           <h4 class="popular__link-title">КЛАССИСКА КЕНИИ</h4>
           <p class="popular__price">от 3500 $</p>
         </a>
-        <a class="popular__link" href="#">
-          <h4 class="popular__link-title">САМЫЕ ПОПУЛЯРНЫЕ САФАРИ ПАРКИ И ЗАПОВЕДНИКИ ТАНЗАНИИ</h4>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-3.jpg);">
+          <h4 class="popular__link-title popular__link-title--big">САМЫЕ ПОПУЛЯРНЫЕ САФАРИ ПАРКИ И ЗАПОВЕДНИКИ ТАНЗАНИИ</h4>
           <p class="popular__country">Танзания</p>
           <p class="popular__time">7 дней / 6 ночей</p>
           <p class="popular__price">от 1700 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-4.jpg);">
           <h4 class="popular__link-title">ИССЛЕДОВАНИЕ БОТСВАНЫ</h4>
           <p class="popular__price">от 2500 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-5.jpg);">
           <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ЧЕРЕЗ 5 СТРАН ЮЖНОЙ АФРИКИ</h4>
           <p class="popular__price">от 5000 $</p>
         </a>
-        <a class="popular__link" href="#">
-          <h4 class="popular__link-title">ГРАНДИОЗНОЕ ПРИКЛЮЧЕНИЕ ПО 9 СТРАНАМ АФРИКИ</h4>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-6.jpg);">
+          <h4 class="popular__link-title popular__link-title--big">ГРАНДИОЗНОЕ ПРИКЛЮЧЕНИЕ ПО 9 СТРАНАМ АФРИКИ</h4>
           <p class="popular__country">ЮАР, Замбия, Намибия, Зимбабве, Ботсвана, Мозамбик, Танзания, Кения</p>
           <p class="popular__time">24 дней / 23 ночей</p>
           <p class="popular__price">от 6000 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-7.jpg);">
           <h4 class="popular__link-title">ВЕЛИКОЛЕПНЫЙ КЕЙПТАУН</h4>
           <p class="popular__price">от 3500 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-8.jpg);">
           <h4 class="popular__link-title">ПУТЕШЕСТВИЕ ПО ЮАР:</h4>
           <p class="popular__price">от 2500 $</p>
         </a>
-        <a class="popular__link" href="#">
-          <h4 class="popular__link-title">ВЕЛИКАЯ МИГРАЦИЯ В ТАНЗАНИИ И ОТДЫХ НА ЗАНЗИБАРЕ/h4>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-9.jpg);">
+          <h4 class="popular__link-title">ВЕЛИКАЯ МИГРАЦИЯ В ТАНЗАНИИ И ОТДЫХ НА ЗАНЗИБАРЕ</h4>
           <p class="popular__price">от 1700 $</p>
         </a>
-        <a class="popular__link" href="#">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-10.jpg);">
           <h4 class="popular__link-title">ОТ КЕЙПТАУНА ДО ВОДОПАДА ВИКТОРИЯ</h4>
           <p class="popular__price">от 2500 $</p>
         </a>
+      </div>
+    </div>
+  </section>
+
+  <section class="map">
+    <div class="container">
+      <h2 class="map__title title">Карта Африки</h2>
+      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19748470.132087998!2d25.699834088812384!3d-12.606894637603634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1640083218758!5m2!1sru!2s" width="1120" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </section>
+
+  <section class="about">
+    <div class="container">
+      <div class="about__inner">
+        <div class="about__content">
+          <h2 class="about__title title">О сафари турах</h2>
+          <p class="about__text">
+            Восточная и Южная Африка являются самыми популярными местами, где можно насладиться увлекательным путешествием, под названием сафари. Именно здесь созданы все условия, чтобы туристы могли почувствовать себя частичкой девственной природы Африки. Туры сафари в Африку характеризуются уникальными программами, в рамках которых туристы перемещаются на комфортабельных, специализированных автомобилях или автобусах.
+          </p>
+          <a class="about__link" href="#">Читать подробней</a>
+        </div>
+        <div class="about__popup">
+           <a class="popup__link" href="#">
+             <img class="about__link-img" src="images/popup.svg" alt="Картинка">
+           </a>
+        </div>
       </div>
     </div>
   </section>
