--- a/index.html
+++ b/index.html
@@ -300,6 +300,59 @@
     </div>
   </section>
 
+  <section class="tour">
+    <div class="container">
+      <h2 class="tour__title">Сафари тур премиум класса</h2>
+      <div class="tour__box">
+        <div class="tour__text">
+          Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими животными в их привычной среде обитания.
+        </div>
+        <div class="tour__text">
+          <span>САФАРИ ТУРИСТИК</span> специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.
+        </div>
+        <div class="tour__text">
+          Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то, что удается лицезреть немногим ? тогда сафари туры созданы для вас.
+        </div>
+        <div class="tour__text">
+          Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями отдых.   
+          Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора, осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса, поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой, первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все подробности о программах уже сформированных туров по сафари.
+        </div>
+      </div>
+      <div class="tour__info">
+        <div class="tour__info-item">
+          16
+          <p class="toor__info-text">
+          лет успешной работы
+          </p>
+        </div>
+        <div class="tour__info-item">
+          50
+          <p class="toor__info-text">
+            гостиниц без посредников
+          </p>
+        </div>
+        <div class="tour__info-item">
+          25+
+          <p class="toor__info-text">
+            собственных туров
+          </p>
+        </div>
+        <div class="tour__info-item">
+          1 220 000
+          <p class="toor__info-text">
+            кв. км - площадь наших путешествий
+          </p>
+        </div>
+        <div class="tour__info-item">
+          5000
+          <p class="toor__info-text">
+            довольных туристов
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
