ЗАВЕРШЕНИЕ ИНФОРМАЦИОННОГО БЛОКА!

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
   <section class="tour">
     <div class="container">
-      <h2 class="tour__title">Сафари тур премиум класса</h2>
+      <h2 class="tour__title title">Сафари тур премиум класса</h2>
       <div class="tour__box">
         <div class="tour__text">
           Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими животными в их привычной среде обитания.
@@ -321,31 +321,31 @@
       <div class="tour__info">
         <div class="tour__info-item">
           16
-          <p class="toor__info-text">
+          <p class="tour__info-text">
           лет успешной работы
           </p>
         </div>
         <div class="tour__info-item">
           50
-          <p class="toor__info-text">
+          <p class="tour__info-text">
             гостиниц без посредников
           </p>
         </div>
         <div class="tour__info-item">
           25+
-          <p class="toor__info-text">
+          <p class="tour__info-text">
             собственных туров
           </p>
         </div>
         <div class="tour__info-item">
-          1 220 000
-          <p class="toor__info-text">
+          1.220.000
+          <p class="tour__info-text">
             кв. км - площадь наших путешествий
           </p>
         </div>
         <div class="tour__info-item">
           5000
-          <p class="toor__info-text">
+          <p class="tour__info-text">
             довольных туристов
           </p>
         </div>
