--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
               <img class="logo__img" src="images/logo.svg" alt="Логотип">
             </a>
             <div class="header__phone">
-              Заказ туров и бронирование:
+              <span>Заказ туров и бронирование:</span>
               <a class="header__phone-number" href="tel:80508543 543">тел. 8-050-8-543-543</a>
             </div>
             <nav class="menu">
+              <button class="menu__btn">
+                <span class="row"></span>
+              </button>
               <ul class="menu__list">
                 <li class="menu__item">
                   <a class="menu__link" href="#">Бронирование</a>
@@ -64,7 +67,7 @@
         </div>
       </div>
   </header>
-
+<!-- 
   <div class="direction">
     <div class="container">
       <div class="direction__inner">
@@ -236,7 +239,6 @@
           <a class="about__link" href="#">Читать подробней</a>
         </div>
         <div class="about__popup">
-          <!-- Попап-видео не грузится - необходимо загрузить сайт на сервер (хостинг). -->
            <a class="popup__link" href="http://www.youtube.com/watch?v=0O2aH4XLbto">
              <img class="about__link-img" src="images/popup.svg" alt="Картинка">
            </a>
@@ -390,18 +392,17 @@
             </p>
         </div>
         <div class="footer__contacts">
-          <p class="footer__box-title">Заказ туров и бронирование:
+          <p class="footer__box-title">Заказ туров и бронирование:</p>
             <a class="footer__phone" href="tel:80508543543">
               тел. 8-050-8-543-543
             </a>
             <a class="footer__mail" href="mailto:safari_turistic@gmail.com">
               e-mail: safari__turistic@gmail.com
             </a>
-          </p>
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
