--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
     </div>
   </section>
-<!-- 
+
   <section class="popular">
     <div class="container">
       <h2 class="popular__title title">Популярные предложения</h2>
@@ -224,7 +224,7 @@
   <section class="map">
     <div class="container">
       <h2 class="map__title title">Карта Африки</h2>
-      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19748470.132087998!2d25.699834088812384!3d-12.606894637603634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1640083218758!5m2!1sru!2s" width="1120" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d19748470.132087998!2d25.699834088812384!3d-12.606894637603634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2s!4v1640083218758!5m2!1sru!2s" width="100%" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </section>
 
@@ -354,7 +354,7 @@
       </div>
     </div>
   </section>
-
+<!--
   <section class="booking">
     <div class="container">
       <h2 class="booking__title title">Забронируйте отдых в Африке</h2>
