--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       </div>
     </div>
   </section>
-<!--
+
   <section class="booking">
     <div class="container">
       <h2 class="booking__title title">Забронируйте отдых в Африке</h2>
@@ -402,7 +402,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
